# AIAgentFastAPI

./: README.md  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_01_1612-8d796261e872_create_user.py
src/: config.py  main.py
src/api/: auth_jwt.py  dao.py  dependencies.py  schemas.py  upload.py  utils.py  views.py
src/chroma_db/: chroma_storage.py  functions.py  llm_with_chroma_db.py  utils.py
src/core/: db_helper.py  models.py
