[project]
name = "aiagentfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "docx2txt>=0.9",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.24",
    "langchain-deepseek>=0.1.3",
    "langchain-gigachat>=0.3.10",
    "langchain-huggingface>=0.2.0",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
]
